# gazetteer-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  communication_layer.lua  config.toml
.github/workflows/: rust.yml
resources/: README.md  config.toml  example.csv  example.list  example.tsv  example_gbif.tsv  filter_de.txt  taxa
src/: api.rs  gui.rs  lib.rs  main.rs  rocket_test.rs  tree.rs  tree_test.rs  util.rs
src/templates/: index.html.tera  success.html.tera
templates/: index.html.tera  macros.html.tera  success.html.tera
tests/: test_tokenizer.rs  test_tree.rs
