[package]
name = "gazetteer"
version = "1.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["cargo"] }
csv = "*"
glob = "0.3.0"
indicatif = "0.17.1"
itertools = "0.10.3"
flate2 = "1.0.24"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.11.3"
toml = "0.5.9"
actix-web = "4.3.0"
actix-files = "0.6.2"
env_logger = "0.10.0"
imbl = "2.0.0"

[features]
gui = []

[[bin]]
name = "gazetteer"
