[package]
name = "gazetteer"
version = "1.6.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
csv = "*"
glob = "0.3"
indicatif = "0.17"
itertools = "0.14"
flate2 = "1.1"
rayon = "*"
serde = { version = "1.0.*", features = ["derive", "rc"] }
serde_json = "*"
tokenizers = "0.21"
toml = "0.8"
actix-web = "4.11"
actix-files = "0.6"
env_logger = "0.11"
anyhow = "*"
tera = { version = "1.20", optional = true }
lazy_static = "1.5"

[features]
default = ["gui"]
gui = ["dep:tera"]

[[bin]]
name = "gazetteer"
